force-app/main/default/objects/TH_Contact_Manual__c/TH_Contact_Manual__c.object-meta.xml
<CustomObject>
    <label>TH Contact Manual</label>
    <nameField>
        <label>TH  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TH Contact Manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>