force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_Building__c.field-meta.xml
<CustomField>
    <fullName>Addr_Building__c</fullName>
    <label>Addr_Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>