force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>Addr_HouseNumber__c</fullName>
    <label>Addr_HouseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>