force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_Lane__c.field-meta.xml
<CustomField>
    <fullName>Addr_Lane__c</fullName>
    <label>Addr_Lane</label>
    <length>255</length>
    <type>Text</type>
</CustomField>