force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Addr_PostalCode__c</fullName>
    <label>Addr_PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>