force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_Province__c.field-meta.xml
<CustomField>
    <fullName>Addr_Province__c</fullName>
    <label>Addr_Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>