force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_Road__c.field-meta.xml
<CustomField>
    <fullName>Addr_Road__c</fullName>
    <label>Addr_Road</label>
    <length>255</length>
    <type>Text</type>
</CustomField>