force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_State__c.field-meta.xml
<CustomField>
    <fullName>Addr_State__c</fullName>
    <label>Addr_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>