force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_SubDistrict__c.field-meta.xml
<CustomField>
    <fullName>Addr_SubDistrict__c</fullName>
    <label>Addr_SubDistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>