force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_VillageName__c.field-meta.xml
<CustomField>
    <fullName>Addr_VillageName__c</fullName>
    <label>Addr_VillageName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>