force-app/main/default/objects/TH_Contact_Manual__c/fields/Addr_VillageNo__c.field-meta.xml
<CustomField>
    <fullName>Addr_VillageNo__c</fullName>
    <label>Addr_VillageNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>