force-app/main/default/objects/TH_Contact_Manual__c/fields/BR_IsOwnUse__c.field-meta.xml
<CustomField>
    <fullName>BR_IsOwnUse__c</fullName>
    <label>BR_IsOwnUse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>