force-app/main/default/objects/TH_Contact_Manual__c/fields/BR_PreviousBrandID__c.field-meta.xml
<CustomField>
    <fullName>BR_PreviousBrandID__c</fullName>
    <label>BR_PreviousBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>