force-app/main/default/objects/TH_Contact_Manual__c/fields/BR_PreviousBrandName__c.field-meta.xml
<CustomField>
    <fullName>BR_PreviousBrandName__c</fullName>
    <label>BR_PreviousBrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>