force-app/main/default/objects/TH_Contact_Manual__c/fields/BR_RelationStatus__c.field-meta.xml
<CustomField>
    <fullName>BR_RelationStatus__c</fullName>
    <label>BR_RelationStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>