force-app/main/default/objects/TH_Contact_Manual__c/fields/Child_NationalID__c.field-meta.xml
<CustomField>
    <fullName>Child_NationalID__c</fullName>
    <label>Child_NationalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>