force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_EDD__c.field-meta.xml
<CustomField>
    <fullName>Contact_EDD__c</fullName>
    <label>Contact_EDD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>