force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_Height__c.field-meta.xml
<CustomField>
    <fullName>Contact_Height__c</fullName>
    <label>Contact_Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>