force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <label>Contact_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>