force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_MasterOptOut__c.field-meta.xml
<CustomField>
    <fullName>Contact_MasterOptOut__c</fullName>
    <label>Contact_MasterOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>