force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>Contact_PreferredLanguage__c</fullName>
    <label>Contact_PreferredLanguage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>