force-app/main/default/objects/TH_Contact_Manual__c/fields/Contact_Weight__c.field-meta.xml
<CustomField>
    <fullName>Contact_Weight__c</fullName>
    <label>Contact_Weight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>