force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_ChannelName__c.field-meta.xml
<CustomField>
    <fullName>CR_ChannelName__c</fullName>
    <label>CR_ChannelName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>