force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_HCPClassification__c.field-meta.xml
<CustomField>
    <fullName>CR_HCPClassification__c</fullName>
    <label>CR_HCPClassification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>