force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_HCPName__c.field-meta.xml
<CustomField>
    <fullName>CR_HCPName__c</fullName>
    <label>CR_HCPName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>