force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_HCPSpecialty__c.field-meta.xml
<CustomField>
    <fullName>CR_HCPSpecialty__c</fullName>
    <label>CR_HCPSpecialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>