force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_SampleProductName__c.field-meta.xml
<CustomField>
    <fullName>CR_SampleProductName__c</fullName>
    <label>CR_SampleProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>