force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_SampleRequested__c.field-meta.xml
<CustomField>
    <fullName>CR_SampleRequested__c</fullName>
    <label>CR_SampleRequested</label>
    <length>10</length>
    <type>Text</type>
</CustomField>