force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_SupervisorName__c.field-meta.xml
<CustomField>
    <fullName>CR_SupervisorName__c</fullName>
    <label>CR_SupervisorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>