force-app/main/default/objects/TH_Contact_Manual__c/fields/CR_UTMCampaign__c.field-meta.xml
<CustomField>
    <fullName>CR_UTMCampaign__c</fullName>
    <label>CR_UTMCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>