force-app/main/default/objects/TH_Contact_Manual__c/validationRules/Invalid_Child_DOB_Date_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Child_DOB_Date_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( $User.LastName = &apos;Integration&apos;),NOT(isblank(Child_DOB__c)),NOT(Regex( Child_DOB__c ,&quot;^(3[01]|[12][0-9]|0[1-9])/(1[0-2]|0[1-9])/[0-9]{4}$&quot;)))</errorConditionFormula>
    <errorMessage>Please enter Child_DOB column with dd/mm/yyyy date format.</errorMessage>
</ValidationRule>